--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,11 @@
       "source": "/ID03-10091690",
       "destination": "/ID03-10091690/ID03-10091690.html",
       "permanent": false
+    },
+    {
+      "source": "/random",
+      "destination": "/random/demo-random.html",
+      "permanent": false
     }
   ]
 }
