--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,4 @@
 {
-  "redirects": [
-    {
-      "source": "/ID01-41316202",
-      "destination": "/ID01-41316202/ID01-41316202.html",
-      "permanent": false
-    },
-    {
-      "source": "/ID02-42721702",
-      "destination": "/ID02-42721702/ID02-42721702.html",
-      "permanent": false
-    },
-    {
-      "source": "/ID03-10091690",
-      "destination": "/ID03-10091690/ID03-10091690.html",
-      "permanent": false
-    },
-    {
-      "source": "/random",
-      "destination": "/random/demo-random.html",
-      "permanent": false
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
