--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "rewrites": [
+    {
+      "source": "/:id(ID[^/]+)",
+      "destination": "/:id/:id.html"
+    }
+  ]
 }
