--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "trailingSlash": false,
   "functions": {
     "api/chat.js": {
-      "maxDuration": 30,
-      "memory": 1024
+      "maxDuration": 30
     }
   },
   "headers": [
@@ -14,7 +13,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-Md5, Content-Type, Date, X-Api-Version" }
       ]
     }
   ],
@@ -39,6 +38,5 @@
       "destination": "/random/demo-random.html",
       "permanent": false
     }
-  ],
-  "installCommand": "npm install"
+  ]
 }
