--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,19 @@
   "cleanUrls": true,
   "trailingSlash": false,
 
+  "functions": {
+    "api/chat.js": {
+      "maxDuration": 30
+    }
+  },
+
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Methods", "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-Md5, Content-Type, Date, X-Api-Version" }
       ]
     }
@@ -37,3 +43,4 @@
     }
   ]
 }
+
